--- a/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
+++ b/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\NorthWind.Sales.Bacnkend.Repositories\NorthWind.Sales.Backend.Repositories.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Presenters\NorthWind.Sales.Backend.Presenters.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Validators.Entities\NorthWind.Sales.Validators.Entities.csproj" />
+    <ProjectReference Include="..\NorthWind.ValidationService.FluentValidation\NorthWind.ValidationService.FluentValidation.csproj" />
   </ItemGroup>
 
 </Project>
