--- a/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
+++ b/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NorthWind.Sales.Backend.Controllers\NorthWind.Sales.Backend.Controllers.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Backend.DataContext.EFCore\NorthWind.Sales.Backend.DataContext.EFCore.csproj" />
+    <ProjectReference Include="..\NorthWind.Sales.Backend.SmtpGatways\NorthWind.Sales.Backend.SmtpGatways.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Backend.UseCases\NorthWind.Sales.Backend.UseCases.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Bacnkend.Repositories\NorthWind.Sales.Backend.Repositories.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Presenters\NorthWind.Sales.Backend.Presenters.csproj" />
