--- a/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
+++ b/NorthWind.Sales.Backend.IoC/NorthWind.Sales.Backend.IoC.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NorthWind.Membership.Backend.AspNetIdentity" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NorthWind.Sales.Backend.Controllers\NorthWind.Sales.Backend.Controllers.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Backend.DataContext.EFCore\NorthWind.Sales.Backend.DataContext.EFCore.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Backend.SmtpGatways\NorthWind.Sales.Backend.SmtpGatways.csproj" />
